--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rich-markdown-editor",
+  "name": "rich-markdown-editor-kn",
   "description": "A rich text editor with Markdown shortcuts built on Slate",
   "version": "9.11.2",
   "main": "lib/index.js",
@@ -37,7 +37,7 @@
     "slate-instant-replace": "^0.1.14",
     "slate-md-serializer": "5.4.4",
     "slate-paste-linkify": "^0.7.0",
-    "slate-react": "^0.21.20",
+    "slate-react": "npm:@thebluedoc/slate-react",
     "slate-schema-violations": "^0.1.39",
     "slugify": "^1.3.4",
     "styled-components": "^4.3.2"
@@ -86,7 +86,7 @@
     "text",
     "wysiwyg"
   ],
-  "author": "Tom Moor <tom.moor@gmail.com>",
+  "author": "allen <hi@summic.com>",
   "bugs": {
     "url": "https://github.com/outline/rich-markdown-editor/issues"
   },
